# jupyter-deploy

./: AGENT.md  README.md  env.example  justfile  pyproject.toml
libs/jupyter-deploy/: pyproject.toml
libs/jupyter-deploy-tf-aws-eks-oidc/: README.md  pyproject.toml
libs/jupyter-deploy-tf-aws-eks-oidc/jupyter_deploy_tf_aws_eks_oidc/: __init__.py
libs/jupyter-deploy-tf-aws-eks-oidc/jupyter_deploy_tf_aws_eks_oidc/template/: AGENT.md.template  TROUBLESHOOT.md.template  manifest.yaml  variables.yaml
libs/jupyter-deploy-tf-aws-eks-oidc/jupyter_deploy_tf_aws_eks_oidc/template/applications/jupyterlab/: Dockerfile  pyproject.toml
libs/jupyter-deploy-tf-aws-eks-oidc/jupyter_deploy_tf_aws_eks_oidc/template/console/: setup-config.html.tftpl
libs/jupyter-deploy-tf-aws-eks-oidc/jupyter_deploy_tf_aws_eks_oidc/template/engine/: eks_addons.tf  helm.tf  iam.tf  karpenter.tf  local-await-router.sh.tftpl  local-destroy-cleanup.sh.tftpl  local-destroy-workspaces.sh.tftpl  local-repair-cr.sh.tftpl  main.tf  outputs.tf  platform.tf  platform_cluster_autoscaler.tf  platform_karpenter.tf  platform_keda.tf  platform_logging.tf  platform_prometheus.tf  variables.tf  waiter.tf  workspaces.tf
libs/jupyter-deploy-tf-aws-eks-oidc/tests/e2e/: conftest.py  test_autoscaling.py  test_cluster.py  test_cluster_autoscaler.py  test_components.py  test_configuration.py  test_console.py  test_deployment.py  test_health.py  test_host.py  test_images.py  test_open.py  test_pool.py  test_routing_network_security.py  test_server.py  test_web_app.py  test_workspace.py  test_workspace_home_volume.py  test_workspace_idleshutdown.py  test_workspace_jupyterlab.py  test_workspace_network_security.py
libs/jupyter-deploy-tf-aws-eks-oidc/tests/e2e/configurations/: base.yaml
libs/jupyter-deploy-tf-aws-eks-oidc/tests/e2e/notebooks/: kernel_simple.ipynb
libs/jupyter-deploy-tf-aws-eks-oidc/tests/e2e/workspaces/: e2e-autoscaling-workspace.yaml  e2e-jupyterlab-admin-public.yaml  e2e-jupyterlab-other-private.yaml  e2e-jupyterlab-other-public.yaml  e2e-ws-admin-delete-private.yaml  e2e-ws-cross-private.yaml  e2e-ws-cross-public.yaml  e2e-ws-idle-long.yaml  e2e-ws-idle-shutdown.yaml  e2e-ws-private-access.yaml  e2e-ws-public-access.yaml  e2e-ws-stop-start.yaml  e2e-ws-user-delete.yaml
libs/jupyter-deploy-tf-aws-eks-oidc/tests/unit/: test_eks_template.py  test_manifest_yaml.py  test_variables_yaml.py  test_workspace_default_template.py
libs/jupyter-deploy/jupyter_deploy/: connection_utils.py  constants.py  enum.py  exceptions.py  fs_utils.py  manifest.py  str_utils.py  variables_config.py  verify_utils.py
libs/jupyter-deploy/jupyter_deploy/api/k8s/: apiextensions.py  apps.py  batch.py  core.py  custom.py  utils.py
libs/jupyter-deploy/jupyter_deploy/cli/: app.py  cluster_app.py  component_app.py  error_decorator.py  health_app.py  host_app.py  image_app.py  pool_app.py  servers_app.py
libs/jupyter-deploy/jupyter_deploy/engine/: engine_variables.py
libs/jupyter-deploy/jupyter_deploy/engine/terraform/: tf_config.py  tf_constants.py  tf_outputs.py  tf_varfiles.py  tf_variables.py
libs/jupyter-deploy/jupyter_deploy/handlers/: base_project_handler.py  docs_generator.py  health_handler.py  init_handler.py  payloads.py
libs/jupyter-deploy/jupyter_deploy/handlers/project/: open_handler.py
libs/jupyter-deploy/jupyter_deploy/handlers/resource/: cluster_handler.py  component_handler.py  host_handler.py  image_handler.py  pool_handler.py  resource_utils.py  server_handler.py
libs/jupyter-deploy/jupyter_deploy/provider/: instruction_runner_factory.py  manifest_command_runner.py  resolved_argdefs.py
libs/jupyter-deploy/jupyter_deploy/provider/aws/: aws_ecr_runner.py  aws_eks_runner.py  aws_elbv2_runner.py  aws_inspector_runner.py  aws_runner.py
libs/jupyter-deploy/jupyter_deploy/provider/k8s/: k8s_apiextensions_runner.py  k8s_apps_runner.py  k8s_batch_runner.py  k8s_client_factory.py  k8s_core_runner.py  k8s_custom_runner.py  k8s_error_handler.py  k8s_runner.py
libs/jupyter-deploy/jupyter_deploy/provider/store/: store_manager.py
libs/jupyter-deploy/tests/unit/: mock_manifest.yaml  mock_variables_v2.yaml  mock_variables_v2_initial.yaml  test_exceptions.py  test_fs_utils_for_variables_yaml.py  test_manifest.py  test_str_utils.py  test_variables_config_v2.py  test_verify_utils.py
libs/jupyter-deploy/tests/unit/api/k8s/: test_apps.py  (+5 more)
libs/jupyter-deploy/tests/unit/cli/: test_app.py  test_app_config.py  test_app_open.py  test_cluster_app.py  test_component_app.py  test_health_app.py  test_history_app.py  test_host_app.py  test_image_app.py  test_organization_app.py  test_pool_app.py  test_servers_app.py  test_teams_app.py  test_users_app.py
libs/jupyter-deploy/tests/unit/engine/: test_engine_variables.py
libs/jupyter-deploy/tests/unit/handlers/: test_base_project_handler.py  test_docs_generator.py  test_health_handler.py
libs/jupyter-deploy/tests/unit/provider/: test_instruction_runner_factory.py  test_manifest_command_runner.py  test_resolved_argdefs.py
libs/jupyter-infra-tf-aws-iam-ci/: README.md  pyproject.toml
libs/jupyter-infra-tf-aws-iam-ci/jupyter_infra_tf_aws_iam_ci/: __init__.py
libs/jupyter-infra-tf-aws-iam-ci/jupyter_infra_tf_aws_iam_ci/template/: manifest.yaml  variables.yaml
libs/jupyter-infra-tf-aws-iam-ci/jupyter_infra_tf_aws_iam_ci/template/engine/: main.tf  outputs.tf  review.tf  variables.tf
libs/jupyter-infra-tf-aws-iam-ci/tests/e2e/configurations/: base.yaml
libs/jupyter-infra-tf-aws-iam-ci/tests/unit/: test_ci_variables_yaml.py
libs/pytest-jupyter-deploy/: README.md  pyproject.toml
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/: cli.py  deployment.py  files.py  notebook.py  plugin.py  suite_config.py
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/image/: Dockerfile  docker-compose.yml
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/kubernetes/: __init__.py  namespace.py
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/oauth2_proxy/: dex.py
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/workspaces/: __init__.py  kubectl.py  network_probe.py  operator.py
(+134 files in other folders)
