[project]
name = "jupyter-deploy"
version = "0.6.1"
description = "CLI based tool to deploy Jupyter applications that integrates with infrastructure as code frameworks."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jonathan Guinegagne", email = "jggg@amazon.com" },
    { name = "Michael Chin", email = "chnmch@amazon.com" },
    { name = "Brian Granger", email = "brgrange@amazon.com" }
]
requires-python = ">=3.12"
dependencies = [
    "decorator>=5.2.1",
    "click<8.2.0",
    "typer>=0.15.4",
    "pydantic>=2.11.5",
    "python-hcl2>=8.1.1",
    "packaging>=25.0",
    "jupyter_core>=5.0.0",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250516",
    "pathspec>=0.12.1",
    "certifi>=2024.0.0",
]

[project.scripts]
jupyter-deploy = "jupyter_deploy.cli.app:main"
jd = "jupyter_deploy.cli.app:main"

[project.entry-points."jupyter_core.subcommands"]
deploy = "jupyter_deploy.cli.app:main"

[project.optional-dependencies]
aws = [
    "boto3>=1.38.23",
    "boto3-stubs>=1.38.23",
    "mypy-boto3-ec2>=1.40.4",
    "mypy-boto3-eks>=1.38.0",
    "mypy-boto3-elbv2>=1.38.0",
    "mypy-boto3-resourcegroupstaggingapi>=1.38.0",
    "mypy-boto3-ssm>=1.38.5",
    "mypy-boto3-s3>=1.38.0",
    "mypy-boto3-dynamodb>=1.38.0",
    "mypy-boto3-sts>=1.38.0",
    "mypy-boto3-secretsmanager>=1.38.0",
]
k8s = [
    "kubernetes>=31.0.0",
]

[tool.uv.sources]
jupyter-deploy-tf-aws-ec2-base = { workspace = true }
jupyter-infra-tf-aws-iam-ci = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jupyter_deploy"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "parameterized>=0.9.0",
    "yamllint>=1.35.0",
]

[project.urls]
Homepage = "https://github.com/jupyter-infra/jupyter-deploy"
github = "https://github.com/jupyter-infra/jupyter-deploy/tree/main/libs/jupyter-deploy"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
mypy_path = ["."]
packages = ["jupyter_deploy"]
plugins = ["pydantic.mypy"]

# kubernetes package ships without py.typed and no maintained stubs exist (kubernetes-stubs stuck at v22)
[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true
follow_untyped_imports = true

[tool.ruff]
extend-exclude = [".conda/"]
line-length = 120

[tool.ruff.lint]
preview = true
select = [
    "E",  # pydocstyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PLC0415",  # import-outside-toplevel - disallow lazy imports
]
ignore = [
    # Ignore other preview rules we're not ready for yet
    "UP042",  # Replace str/Enum with StrEnum (Python 3.11+)
    "UP046",  # Use PEP 695 type parameters (Python 3.12+)
    "UP047",  # Use PEP 695 type parameters for functions (Python 3.12+)
]

[tool.ruff.lint.per-file-ignores]
# Allow lazy imports in provider factory (handles optional dependencies)
"jupyter_deploy/provider/instruction_runner_factory.py" = ["PLC0415"]
"jupyter_deploy/provider/store/store_manager_factory.py" = ["PLC0415"]
# E2E install track tests use inline imports to test optional dependency boundaries
"tests/e2e/test_bare_installation.py" = ["PLC0415"]
"tests/e2e/test_aws_installation.py" = ["PLC0415"]
"tests/e2e/test_k8s_installation.py" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

docstring-code-format = true
docstring-code-line-length = 40

[tool.pytest.ini_options]
addopts = "--cov=jupyter_deploy --cov-report=term-missing --cov-report=xml --cov-report=html"
testpaths = ["tests/unit"]
markers = [
    "e2e: End-to-end tests using playwright (deselect with '-m \"not e2e\"')",
    "bare: Tests requiring the bare install track with no AWS deps (select with '-m bare')",
]

[tool.coverage.run]
source = ["jupyter_deploy"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 80
show_missing = true
