[project]
name = "pytest-jupyter-deploy"
version = "0.2.7"
description = "Pytest plugin for E2E testing of jupyter-deploy templates"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Jonathan Guinegagne", email = "jggg@amazon.com" },
    { name = "Michael Chin", email = "chnmch@amazon.com" },
    { name = "Brian Granger", email = "brgrange@amazon.com" }
]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "jupyter-deploy",
    "pytest>=8.3.5",
    "pytest-order>=1.3.0",
    "pyyaml>=6.0.2",
    "pexpect>=4.9.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
ui = [
    "pytest-playwright>=0.7.2",
]

[project.entry-points.pytest11]
jupyter_deploy = "pytest_jupyter_deploy.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytest_jupyter_deploy"]

[project.urls]
Homepage = "https://github.com/jupyter-infra/jupyter-deploy"
Repository = "https://github.com/jupyter-infra/jupyter-deploy/tree/main/libs/pytest-jupyter-deploy"
Issues = "https://github.com/jupyter-infra/jupyter-deploy/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = [
    "E",  # pydocstyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PLC0415",  # import-outside-toplevel - disallow lazy imports
]
ignore = [
    # Ignore other preview rules we're not ready for yet
    "UP042",  # Replace str/Enum with StrEnum (Python 3.11+)
    "UP046",  # Use PEP 695 type parameters (Python 3.12+)
    "UP047",  # Use PEP 695 type parameters for functions (Python 3.12+)
]

[tool.ruff.lint.per-file-ignores]
# Allow lazy imports in tests (common pattern for imports after mocks)
"tests/**/*.py" = ["PLC0415"]

[tool.pytest.ini_options]
addopts = "--cov=pytest_jupyter_deploy --cov-report=term-missing --cov-report=xml --cov-report=html -p pytester"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pytest_jupyter_deploy"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 4
show_missing = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
mypy_path = ["."]
packages = ["pytest_jupyter_deploy"]

[tool.uv.sources.jupyter-deploy]
workspace = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "yamllint>=1.35.0",
    "types-pexpect>=4.9.0",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.0",
]
